--- a/app/assets/stylesheets/base/main.css.scss
+++ b/app/assets/stylesheets/base/main.css.scss
@@ -9,7 +9,7 @@
 * { @include box-sizing(border-box); }
 
 body {
-  background: $body-bg;
+  background: $body-background;
   color: $text-color;
   -webkit-font-smoothing: antialiased;
   word-wrap: break-word;
