--- a/app/assets/stylesheets/themes/square.css.scss
+++ b/app/assets/stylesheets/themes/square.css.scss
@@ -25,7 +25,7 @@ body, textarea, input {
 }
 
 #body {
-  background: #151515;
+  background: $body-background;
 }
 
 h1, h2, h3, h4, #text-title *, nav.pagination a {
@@ -272,7 +272,7 @@ header {
       font-size: 2.4rem;
 
       a {
-        color: #fff;
+        color: #151515;
 
         &:hover {
           color: #888;
@@ -369,6 +369,7 @@ nav.pagination {
 }
 
 code, .CodeRay {
-  background: #000;
+  background: #fff;
   padding: 20px;
+  border-radius: 5px;
 }
